fix dark mode not working on non-main pages

--- a/styles.css
+++ b/styles.css
@@ -346,7 +346,7 @@ ul.social-links > li {
 
 /*DARK MODE BUTTON*/
 .topbar {
-  padding-bottom: 1em;
+  padding-bottom: 10px;
 }
 .btn-toggle {
   border: none;
@@ -408,6 +408,7 @@ a:visited,
 .topnav a.active,
 li,
 td,
+blockquote,
 hr {
   color: var(--text-color);
 }
